--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -54,3 +54,35 @@
 .containerMain {
 	margin-top: -50px;
 }
+
+/* Carousel base class */
+.carousel {
+  height: 450px;
+  margin-bottom: 60px;
+}
+
+.carousel-control {
+    position: absolute; /* already here */
+    top: 65%;  /* Was top: 40% */
+}
+
+
+/* Since positioning the image, we need to help out the caption */
+.carousel-caption {
+  z-index: 10;
+  width: 80%;
+  left:10%;
+}
+
+/* Declare heights because of positioning of img element */
+.carousel .item {
+  height: 450px;
+  background-color: #777;
+}
+.carousel-inner > .item > img {
+  position: relative;
+  top: -10%;
+  left: 0;
+  height: 80%;
+  width: 100%;
+}
