--- a/css/footer.css
+++ b/css/footer.css
@@ -11,15 +11,12 @@ body {
 #wrap {
   min-height: 100%;
   height: auto;
-  /* Negative indent footer by its height */
-  margin: 0 auto -60px;
-  /* Pad bottom by footer height */
-  padding: 0 0 60px;
 }
 
 /* Set the fixed height of the footer here */
 #footer {
-  height: 60px;
+  position: relative;
+  height: 100%;
   background-color: #f5f5f5;
 }
 
