--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -6,21 +6,41 @@
 .jumbotronMain {
 	background-attachment: relative;
 	background-image: url(../images/banner-bg.jpg);
-    background-position: 0% 10%;
-    background-size: cover;
-    background-repeat: no-repeat;
-    min-height: 450px;
+  background-position: 0% 10%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  min-height: 450px;
 	width: 100%;
 
-    -webkit-background-size: 100%;
-    -moz-background-size: 100%;
-    -o-background-size: 100%;
-    background-size: 100%;
+  -webkit-background-size: 100%;
+  -moz-background-size: 100%;
+  -o-background-size: 100%;
+  background-size: 100%;
 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.jumbotronAbout {
+  background-attachment: relative;
+  background-image: url(../images/about-bg.jpg);
+  background-position: 0% 45%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  min-height: 500px;
+  width: 100%;
+
+  -webkit-background-size: 100%;
+  -moz-background-size: 100%;
+  -o-background-size: 100%;
+  background-size: 100%;
+
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 .mainH1 {
@@ -57,7 +77,7 @@
 
 /* Carousel base class */
 .carousel {
-  height: 450px;
+  height: 350px;
   margin-bottom: 60px;
 }
 
@@ -76,7 +96,7 @@
 
 /* Declare heights because of positioning of img element */
 .carousel .item {
-  height: 450px;
+  height: 350px;
   background-color: #777;
 }
 .carousel-inner > .item > img {
