--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -29,7 +29,7 @@
   background-position: 0% 45%;
   background-size: cover;
   background-repeat: no-repeat;
-  min-height: 500px;
+  min-height: 450px;
   width: 100%;
 
   -webkit-background-size: 100%;
@@ -105,4 +105,8 @@
   left: 0;
   height: 80%;
   width: 100%;
+}
+
+.shadow{
+  text-shadow: 2px 2px #303030;
 }
