--- a/css/styles.css
+++ b/css/styles.css
@@ -281,7 +281,7 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6{
     top:50%;
     left:50%;
     margin:-32px 0 0 -32px;
-    background: url('../images/preloader.gif') no-repeat;
+    background: url('../assets/images/preloader.gif') no-repeat;
         
 }
 
