--- a/css/styles.css
+++ b/css/styles.css
@@ -579,6 +579,14 @@ h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6{
 --- Portfolio Styles ----
 -------------------------*/
 
+ul li{
+    color: #6d6d6d;
+    font-size: 20px;
+}
+
+
+
+
 #portfolio{
     padding-top:40px;
     /* background:url('../assets/images/bg-portfolio.jpg') no-repeat fixed; */
