Base functionality complete
Reduced CSS and JS usage. Optimised images

--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -5,6 +5,41 @@ $susy: (
   math: fluid,
 );
 
+/* Variables */
+$font-stack: Raleway, Arial, sans-serif;
+$base-font-size: 16px;
+
+$text-dark: #6d6d6d;
+$text-light: #ffffff;
+
+$theme-primary: #5281A1;
+$theme-inverse: #ffffff;
+
+$nav-background: #ffffff;
+
+$hero-color: rgba(90, 169, 206, 0.7);
+$footer-color: #1f2c37;
+
+$telegraph-color: #2299A1;
+$investment-color: #50C58F;
+$banking-color: #2A607F;
+$pandapay-color: #DF755E;
+$drinksy-color: #EEA80D;
+$concept-color: #2299A1;
+
+$xs-breakpoint: 320px;
+$s-breakpoint: 425px;
+$m-breakpoint: 768px;
+$l-breakpoint: 1024px;
+$xl-breakpoint: 1440px;
+
+$default-padding: 16px;
+
+/* Mixins */
+@mixin component-padding() {
+	padding-left: $default-padding;
+	padding-right: $default-padding;
+}
 
 html {
 	box-sizing: border-box;
@@ -14,10 +49,391 @@ html {
 	box-sizing: inherit;
 }
 
-section {
-	@include container(80em);
+body {
+	font-family: $font-stack;
+	margin: 0;
+	display: flex;
+	flex-direction: column;
 }
 
-.hero {
-	@include span(isolate 6 at 4);
+h1 {
+	font-family: $font-stack;
+	font-weight: 300;
+	text-transform: uppercase;
+	font-size: 48px;
+	line-height: 50px;
+
+	&.large {
+		font-size: 58px;
+		line-height: 60px;
+	}
+}
+h2 {
+	font-family: $font-stack;
+	font-weight: 300;
+	text-transform: uppercase;
+	font-size: 38px;
+	line-height: 40px;
+}
+
+.logo {
+	width: 40px;
+	height: 40px;
+}
+
+nav {
+	background-color: $nav-background;
+	position: fixed;
+	width: 100%;
+	z-index: 9;
+	border-bottom: 0.5px solid #ddd;
+
+	#menu-toggle {
+		display: none;
+	}
+
+	#menu-toggle:checked + .navbar-menu {
+		display: block;
+	}
+
+	.navbar-header {
+		display: flex;
+		justify-content: space-between;
+		padding: 8px 8px 8px 8px;
+
+		a {
+			color: $text-dark;
+			font-size: 20px;
+			line-height: 30px;
+			text-decoration: none;
+			text-transform: uppercase;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+
+			img {
+				margin-right: 8px;
+			}
+		}		
+	}
+
+	.navbar-menu {
+		display: none;
+		margin: 0;
+		padding: 10px;
+		list-style: none;
+		text-align: center;
+
+		li a {
+			text-decoration: none;
+			color: $text-dark;
+		}
+
+		li+li {
+			margin-top: 12px;
+		}
+		
+	}
+
+	.navbar-toggle {
+		cursor: pointer;
+		background-color: transparent;
+		border: 0;
+		&:focus {
+			outline: 0;
+		}
+		.bar {
+			display: block;
+			width: 28px;
+			height: 4px;
+			background-color: $text-dark;
+		}
+		.bar+.bar {
+			margin-top: 4px;
+		}
+	}
+}
+
+@media screen and (min-width: 550px) {
+	nav {
+		.content {
+			@include container($l-breakpoint);
+			display: flex;
+			justify-content: space-between;
+		}	
+		
+		.navbar-toggle {
+			display: none;
+		}
+		.navbar-menu {
+			display: flex !important;;
+			flex-direction: row;
+			order: 3;
+
+			li {
+				
+			}
+
+			li+li {
+				margin-left: 20px;
+			}
+		}
+	}	
+}
+
+/************* INTRO ******************/
+#intro {
+	background: 
+	linear-gradient($hero-color, $hero-color),
+	url("../images/background-1.jpg");
+
+	background-size: cover;	
+	background-repeat: no-repeat;
+	background-position: 0px 50px;	
+	padding-bottom: 30px;
+
+	.content {
+		@include component-padding();
+		padding-top: 80px;
+		color: $text-light;
+		
+
+		h1 {
+			margin-bottom: 0px;
+			font-weight: 600;
+		}
+	}
+}
+
+@media screen and (min-width: $m-breakpoint) {
+	#intro {
+		background-size: cover;
+	
+		.content {
+			@include span(isolate 6 at 7);
+
+		}
+	}
+}
+
+@media screen and (min-width: $l-breakpoint) {
+	#intro {
+		background-position: 0px 0px;	
+		.content {			
+			@include span(isolate 5 at 6);
+		}
+	}
+}
+
+@media screen and (min-width: $xl-breakpoint) {
+	#intro {
+		background-position: top 0px left 0px;	
+		height: 500px;
+
+		.content {			
+			padding-top: 150px;
+			vertical-align: center
+		}
+	}
+}
+
+/************* BACKGROUND ******************/
+#background {
+	@include component-padding();
+	color: $text-dark;
+	padding-bottom: 30px;
+
+	a {
+		color: $text-dark;
+	}
+
+	.content {
+		@include container($l-breakpoint - 100);
+
+		&.lead {
+			padding-top: 50px;
+		}
+	}
+
+	h1 {
+		text-align: center;
+	}
+}
+
+/************* PROJECTS ******************/
+.portfolio-intro {
+	@include component-padding();
+	padding-top: 5px;
+	padding-bottom: 30px;
+	background-color: $footer-color;
+
+	.content {
+		@include container($l-breakpoint - 100);
+		color: $text-light;
+
+		h1 {
+			text-align: center
+		}
+	}
+}
+
+.project {
+	&.telegraph {
+		background-color: $telegraph-color;
+	}
+	&.investment {
+		background-color: $investment-color;
+	}
+	&.banking {
+		background-color: $banking-color;
+	}
+	&.pandapay {
+		background-color: $pandapay-color;
+	}
+	&.drinksy {
+		background-color: $drinksy-color;
+	}
+	&.concept {
+		background-color: $concept-color;
+	}
+
+	color: $text-light;
+	@include component-padding();
+	padding-top: 10px;
+	padding-bottom: 30px;
+
+	a {
+		color: $text-light;
+	}
+
+	button {
+		cursor: pointer;
+		font-family: $font-stack;
+		font-size: $base-font-size;
+		padding: 5px 20px;
+		color: $theme-inverse;
+		background: transparent;
+		border: 1px solid;
+		border-color: $theme-inverse;
+		outline: none !important;
+		border-radius: 0;
+		transition: opacity .2s ease-out;
+
+		&:hover {
+			color: $theme-inverse;
+			opacity: 0.9;
+		}
+
+		&:focus,
+		&:active {
+			color: $theme-inverse;
+		}
+	}
+
+	img {
+		display: block;
+		width: 100%;
+		margin: 0 auto;
+	}
+
+	.details {
+		display: none;
+	}
+}
+
+@media screen and (min-width: $m-breakpoint) {
+	.project {
+		.content {	
+			@include container(700px);	
+
+			.project-image {
+				@include span(4);
+				padding-top: 30px;
+			}
+			.project-info{
+				@include span(7);
+			}
+		}
+	}
+}
+
+@media screen and (min-width: $l-breakpoint) {
+	.project {
+		.content {
+			@include container($l-breakpoint);
+
+			.project-image {
+				@include span(3);
+				margin: 0 auto;
+			}
+			.project-info{
+				@include component-padding();
+				@include span(9);
+			}
+		}
+	}
+}
+/************* CONTACTS ******************/
+#contact {
+	@include component-padding();
+	padding-bottom: 30px;
+	background-color: black;
+	color: $text-light;
+	text-align: center;
+
+	.social-links {
+		display: flex;
+		margin: auto;
+		padding: 0 0 16px 0;
+		list-style: none;
+		align-items: center;
+		justify-content: center;
+
+		li {	
+			a {
+				background-color: $theme-primary;
+				border-radius: 50%;
+				padding: 10px;
+				font-size: 21px;
+				color: $theme-inverse;
+				transition: all .3s ease-out;
+
+				&:hover {
+					color: $theme-primary;
+					background-color: $theme-inverse;
+				}
+			}
+		}
+		li+li {
+			margin-left: 8px;
+		}
+	}
+}
+
+@media screen and (min-width: $m-breakpoint) {
+	#contact {
+		background: 
+			url("../images/background-3.png");
+		background-size: cover;	
+		background-repeat: no-repeat;
+	}
+}
+
+@media screen and (min-width: $l-breakpoint) {
+	#contact {
+		height: 300px;
+	}
+}
+
+/************* FOOTER ******************/
+footer {
+	background-color: $footer-color;
+	border-top: 7px solid $theme-primary;
+
+	img {
+		display: block;
+		margin: 0 auto;
+		margin-top: 1.6rem;
+		margin-bottom: 1.6rem;
+	}
 }
