--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -31,6 +31,7 @@ $drinksy-color: #EEA80D;
 $concept-color: #2299A1;
 $kounta-color: #F2EDEB;
 $delivering-color: #00aaa7;
+$stripe-color: #f0f0f0;
 
 $xs-breakpoint: 320px;
 $s-breakpoint: 425px;
@@ -90,12 +91,12 @@ p {
 	line-height: 28px;
 }
 
-ul {
-	li {
-		a {
-			font-size: 18px;
-			line-height: 28px;
-		}
+a {
+	font-size: 18px;
+	line-height: 28px;
+	color: $text-light;
+	&.dark {
+		color: $text-dark;
 	}
 }
 
@@ -206,6 +207,8 @@ nav {
 
 	a {
 		color: $text-light;
+		font-size: 24px;
+		line-height: 32px;
 	}
 
 	.content {
@@ -214,9 +217,7 @@ nav {
 		color: $text-light;
 
 		h1 {
-			font-family: $sans;
 			margin-bottom: 0px;
-			font-weight: 600;
 		}
 
 		p {
@@ -225,6 +226,8 @@ nav {
 
 			&.lead {
 				margin-top: 8px;
+				font-size: 24px;
+				line-height: 32px;
 			}
 		}
 	}
@@ -284,6 +287,36 @@ nav {
 	}
 }
 
+.articles {
+	clear: both;
+
+	a {
+		text-decoration: none;
+	}
+
+	h2 {
+		font-size: 18px;
+		line-height: 24px;
+	}
+
+	p {
+		font-size: 16px;
+		line-height: 24px;
+	}
+
+	.card {
+		padding: 16px;
+	}
+	display: grid;
+	grid-template-rows: auto;
+	grid-row-gap: 16px;
+
+	@media screen and (min-width: $m-breakpoint) {
+		grid-template-columns: 1fr 1fr 1fr;
+		grid-column-gap: 24px;
+	}
+}
+
 /************* PROJECTS ******************/
 .portfolio-intro {
 	@include component-padding();
@@ -301,42 +334,46 @@ nav {
 	}
 }
 
+button {
+	cursor: pointer;
+	font-family: $sans;
+	font-size: $base-font-size;
+	padding: 5px 20px;
+	color: $text-dark;
+	background: transparent;
+	border: 1px solid $text-dark;
+	outline: none !important;
+	border-radius: 0;
+	transition: opacity .2s ease-out;
+
+	&:hover {
+		opacity: 0.8;
+	}
+}
+
+.card {
+	background-color: #ffffff;
+	box-shadow: 0px 10px 20px 0px rgba(0,0,0,0.10);
+
+	img {
+		width: 100%;
+	}
+
+	&.small {
+		width: 50%;
+		margin: auto;
+	}
+
+}
+
 .project {
-	color: $text-light;
+	color: $text-dark;
 	@include component-padding();
 	padding-top: 10px;
 	padding-bottom: 30px;
 
 	a {
-		color: $text-light;
-	}
-
-	button {
-		cursor: pointer;
-		font-family: $sans;
-		font-size: $base-font-size;
-		padding: 5px 20px;
-		color: $theme-inverse;
-		background: transparent;
-		border: 1px solid $theme-inverse;
-		outline: none !important;
-		border-radius: 0;
-		transition: opacity .2s ease-out;
-
-		&:hover {
-			color: $theme-inverse;
-			opacity: 0.9;
-		}
-
-		&:focus,
-		&:active {
-			color: $theme-inverse;
-		}
-
-		&.dark {
-			color: $text-dark;
-			border-color: $text-dark;
-		}
+		color: $text-dark;
 	}
 
 	img {
@@ -356,18 +393,10 @@ nav {
 			@include container(700px);
 			.project-image {
 				@include span(5);
-				padding-top: 30px;
+				padding-top: 32px;
 			}
 			.project-info{
 				@include span(7);
-			}
-			&.alternate {
-				.project-image {
-					order: 2;
-				}
-				.project-info{
-					order: 1;
-				}
 			}
 		}
 		@media screen and (min-width: $l-breakpoint) {
@@ -385,30 +414,17 @@ nav {
 		}
 	}
 
-	&.telegraph {
-		background-color: $telegraph-color;
-	}
-	&.investment {
-		background-color: $investment-color;
-	}
-	&.banking {
-		background-color: $banking-color;
-	}
-	&.pandapay {
-		background-color: $pandapay-color;
-	}
-	&.drinksy {
-		background-color: $drinksy-color;
-	}
-	&.concept {
-		background-color: $concept-color;
-	}
-	&.delivering {
-		background-color: $delivering-color;
-	}
-	&.kounta {
-		background-color: $kounta-color;
-		color: $text-dark;
+	&:nth-child(even){
+		background-color: $stripe-color;
+
+		@media screen and (min-width: $m-breakpoint) {
+			.project-image {
+				order: 2;
+			}
+			.project-info{
+				order: 1;
+			}
+		}
 	}
 }
 
@@ -422,30 +438,31 @@ nav {
 		display: grid;
 		grid-template-columns: auto;
 		grid-template-rows: auto;
-		grid-row-gap: 16px;
+		grid-row-gap: 24px;
 
 		img {
 			width: 100%;
 		}
 
 		@media screen and (min-width: $m-breakpoint) {
-			grid-template-columns: 0.25fr 1fr 1fr 1fr 0.25fr;
-			grid-template-rows: auto;
-			grid-column-gap: 16px;
-			grid-template-areas:
-				". one two three .";
+			grid-template-columns: repeat(12, 1fr);
+			grid-template-rows: repeat(12, auto);
+			grid-column-gap: 32px;
+			grid-row-gap: 32px;
 
 			.one {
-				grid-area: one;
+				grid-column: 1 / 7;
+				grid-row: 1 / 7;
 			}
 
 			.two {
-				grid-area: two;
-				padding-bottom: 24px;
+				grid-column: 8 / 12;
+				grid-row: 2 / 5;
 			}
 
 			.three {
-				grid-area: three;
+				grid-column: 7 / 11;
+				grid-row: 5 / 12;
 			}
 		}
 	}
@@ -467,7 +484,7 @@ nav {
 		align-items: center;
 		justify-content: center;
 
-		li {	
+		li {
 			a {
 				background-color: $theme-primary;
 				border-radius: 50%;
@@ -619,6 +636,22 @@ footer {
 				@include push(4);
 			}
 			background-color: $delivering-color;
+		}
+
+		&.kounta {
+			h1 {
+				margin-bottom: 24px;
+			}
+			img {
+				@include span(8);
+				@include push(2);
+
+				@media screen and (min-width: $xl-breakpoint){
+					@include span(6);
+					@include push(3);
+				}
+			}
+			background-color: $kounta-color;
 		}
 	}
 }
