--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -580,6 +580,14 @@ footer {
 
 	img {
 		width: 100%;
+
+		&.small {
+			width: auto;
+		}
+		&.centred {
+			display: block;
+			margin: 0 auto;
+		}
 	}
 
 	.sideBySide {
